[package]
name = "ambient-auction-api"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1", features = ["derive", "const_zeroed"] }
num_enum = "0.7.5"
five8_const = "0.1.3"
base64 = { version = "0.22", optional = true }
bs58 = { version = "0.5.1", optional = true }
hex = { version = "0.4.3", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
thiserror = { version = "2.0.12", default-features = false }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
borsh = { version = "0.10.4", optional = true }

[dev-dependencies]
memoffset = "0.9.1"

[features]
decoder = ["dep:base64", "dep:clap", "dep:hex", "dep:serde_json", "serde"]
serde = ["dep:bs58", "dep:serde", "dep:borsh"]
default = []
